--- a/package.json
+++ b/package.json
@@ -17,19 +17,30 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/chrome": "0.0.158",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.20",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^7.1.2",
     "glob": "^7.1.6",
     "jest": "^29.5.0",
+    "postcss-loader": "^8.1.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.0.0",
     "typescript": "^5.0.4",
