--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,36 +1,38 @@
 {
   "manifest_version": 3,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
-  "version": "1.0",
+  "name": "Auto Toggle Extension",
+  "description": "Boost productivity by managing and organizing browser extensions",
+  "version": "1.0.0",
 
   "options_ui": {
     "page": "options.html"
   },
 
   "action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+      "16": "icon16.png",
+      "24": "icon24.png",
+      "32": "icon32.png",
+      "48": "icon48.png",
+      "64": "icon64.png",
+      "128": "icon128.png"
+    },
     "default_popup": "popup.html"
   },
 
   "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/vendor.js", "js/content_script.js"]
+    }
   ],
 
   "background": {
     "service_worker": "js/background.js"
   },
 
-  "permissions": [
-    "storage",
-    "management"
-  ],
+  "permissions": ["storage", "management"],
 
-  "host_permissions": [
-    "<all_urls>"
-  ]
+  "host_permissions": ["<all_urls>"]
 }
