--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
 
-  "name": "Auto Toggle Extension",
+  "name": "Auto Toggle Extensions",
   "description": "Boost productivity by managing and organizing browser extensions",
   "version": "1.0.0",
 
