--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,17 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Run install packages
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: install
+    
+    - name: Build production
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: build
+    
+    - name: Run test
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: test
